mudanças na referência das imagens

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -67,7 +67,7 @@ body{
     }
     #hero{
         margin-top: 0 !important;
-        background: url(../images/xVideo.jpg) no-repeat center top;
+        background: url(../images/imagem2.jpg) no-repeat center top;
         background-size: cover;
         height: 100vh;
         position: relative;
