--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body #video button, body #testimonials button {
 
 body #hero {
   margin-top: 0 !important;
-  background: url(../images/xVideo.jpg) no-repeat center top;
+  background: url(../images/imagem2.jpg) no-repeat center top;
   background-size: cover;
   height: 100vh;
   position: relative;
